src/main/java/refi/RefiParser.java
// Generated from C:/Users/robg3/workspace/refi/src/refi/RefiParser.g4 by ANTLR 4.13.1

package refi;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RefiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CHAR=1, COLON=2, COMMA=3, HEX_NUMBER=4, INT=5, LEFTCURLY=6, LEFTPAREN=7, 
		OCTAL_NUMBER=8, RIGHTCURLY=9, RIGHTPAREN=10, STRING=11, VERTICAL=12, WS=13, 
		ALPHABETIC=14, ATLEAST=15, ANY=16, ANYWILD=17, ASCII=18, BACKTICK=19, 
		BELL=20, BETWEEN=21, BOL=22, CAPTURE=23, CASEINS=24, CASEINSOFF=25, COMMENTS=26, 
		CTRL=27, CURRENCY=28, DIGIT=29, DOTALL=30, EITHER=31, ESCAPE=32, EOL=33, 
		EXACTLY=34, FLAGGED=35, FLAGS=36, FORMFEED=37, GREEK=38, HEX=39, LATIN=40, 
		LOWER=41, MULTILINE=42, NEWLINE=43, NONDIGIT=44, NOT=45, OCTAL=46, OPTIONAL=47, 
		OR=48, POSSES=49, RANGE=50, RELUCT=51, RETURN=52, SOME=53, SOMESPACE=54, 
		TAB=55, UNICODECASE=56, UNICODECASEOFF=57, UNION=58, UNIXLINES=59, UNIXLINESOFF=60, 
		UPPER=61, WILD=62, WORDBOUNDARY=63, ZZ=64;
	public static final int
		RULE_expression = 0, RULE_backeted_matcher = 1, RULE_matcher = 2, RULE_literal_matcher = 3, 
		RULE_atleast = 4, RULE_between = 5, RULE_capture_matcher = 6, RULE_caseins = 7, 
		RULE_caseinsoff = 8, RULE_char = 9, RULE_ctrl_matcher = 10, RULE_either_matcher = 11, 
		RULE_expr_param_matcher = 12, RULE_exactly = 13, RULE_flagged = 14, RULE_flags = 15, 
		RULE_greek = 16, RULE_hex_matcher = 17, RULE_nondigit = 18, RULE_not_matcher = 19, 
		RULE_octal_matcher = 20, RULE_or_matcher = 21, RULE_range_matcher = 22, 
		RULE_union = 23, RULE_string = 24, RULE_matcher_name = 25, RULE_match_type = 26, 
		RULE_alphabetic = 27, RULE_anywild = 28, RULE_backtick = 29, RULE_bell = 30, 
		RULE_bol = 31, RULE_currency = 32, RULE_digit = 33, RULE_escape = 34, 
		RULE_eol = 35, RULE_flagname = 36, RULE_formfeed = 37, RULE_latin = 38, 
		RULE_lower = 39, RULE_newline = 40, RULE_return = 41, RULE_somespace = 42, 
		RULE_tab = 43, RULE_unicodecase = 44, RULE_unicodecaseoff = 45, RULE_unixlines = 46, 
		RULE_unixlinesoff = 47, RULE_upper = 48, RULE_wild = 49, RULE_wordboundary = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "backeted_matcher", "matcher", "literal_matcher", "atleast", 
			"between", "capture_matcher", "caseins", "caseinsoff", "char", "ctrl_matcher", 
			"either_matcher", "expr_param_matcher", "exactly", "flagged", "flags", 
			"greek", "hex_matcher", "nondigit", "not_matcher", "octal_matcher", "or_matcher", 
			"range_matcher", "union", "string", "matcher_name", "match_type", "alphabetic", 
			"anywild", "backtick", "bell", "bol", "currency", "digit", "escape", 
			"eol", "flagname", "formfeed", "latin", "lower", "newline", "return", 
			"somespace", "tab", "unicodecase", "unicodecaseoff", "unixlines", "unixlinesoff", 
			"upper", "wild", "wordboundary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CHAR", "COLON", "COMMA", "HEX_NUMBER", "INT", "LEFTCURLY", "LEFTPAREN", 
			"OCTAL_NUMBER", "RIGHTCURLY", "RIGHTPAREN", "STRING", "VERTICAL", "WS", 
			"ALPHABETIC", "ATLEAST", "ANY", "ANYWILD", "ASCII", "BACKTICK", "BELL", 
			"BETWEEN", "BOL", "CAPTURE", "CASEINS", "CASEINSOFF", "COMMENTS", "CTRL", 
			"CURRENCY", "DIGIT", "DOTALL", "EITHER", "ESCAPE", "EOL", "EXACTLY", 
			"FLAGGED", "FLAGS", "FORMFEED", "GREEK", "HEX", "LATIN", "LOWER", "MULTILINE", 
			"NEWLINE", "NONDIGIT", "NOT", "OCTAL", "OPTIONAL", "OR", "POSSES", "RANGE", 
			"RELUCT", "RETURN", "SOME", "SOMESPACE", "TAB", "UNICODECASE", "UNICODECASEOFF", 
			"UNION", "UNIXLINES", "UNIXLINESOFF", "UPPER", "WILD", "WORDBOUNDARY", 
			"ZZ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RefiParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RefiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RefiParser.EOF, 0); }
		public List<MatcherContext> matcher() {
			return getRuleContexts(MatcherContext.class);
		}
		public MatcherContext matcher(int i) {
			return getRuleContext(MatcherContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				matcher();
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -2819148954744702L) != 0) );
			setState(107);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Backeted_matcherContext extends ParserRuleContext {
		public TerminalNode LEFTPAREN() { return getToken(RefiParser.LEFTPAREN, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(RefiParser.RIGHTPAREN, 0); }
		public List<MatcherContext> matcher() {
			return getRuleContexts(MatcherContext.class);
		}
		public MatcherContext matcher(int i) {
			return getRuleContext(MatcherContext.class,i);
		}
		public Backeted_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_backeted_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterBacketed_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitBacketed_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitBacketed_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Backeted_matcherContext backeted_matcher() throws RecognitionException {
		Backeted_matcherContext _localctx = new Backeted_matcherContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_backeted_matcher);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LEFTPAREN);
			setState(111); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				matcher();
				}
				}
				setState(113); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -2819148954744702L) != 0) );
			setState(115);
			match(RIGHTPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatcherContext extends ParserRuleContext {
		public AtleastContext atleast() {
			return getRuleContext(AtleastContext.class,0);
		}
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public BetweenContext between() {
			return getRuleContext(BetweenContext.class,0);
		}
		public AlphabeticContext alphabetic() {
			return getRuleContext(AlphabeticContext.class,0);
		}
		public AnywildContext anywild() {
			return getRuleContext(AnywildContext.class,0);
		}
		public BellContext bell() {
			return getRuleContext(BellContext.class,0);
		}
		public BolContext bol() {
			return getRuleContext(BolContext.class,0);
		}
		public BacktickContext backtick() {
			return getRuleContext(BacktickContext.class,0);
		}
		public Capture_matcherContext capture_matcher() {
			return getRuleContext(Capture_matcherContext.class,0);
		}
		public CaseinsContext caseins() {
			return getRuleContext(CaseinsContext.class,0);
		}
		public CaseinsoffContext caseinsoff() {
			return getRuleContext(CaseinsoffContext.class,0);
		}
		public CharContext char_() {
			return getRuleContext(CharContext.class,0);
		}
		public Ctrl_matcherContext ctrl_matcher() {
			return getRuleContext(Ctrl_matcherContext.class,0);
		}
		public CurrencyContext currency() {
			return getRuleContext(CurrencyContext.class,0);
		}
		public DigitContext digit() {
			return getRuleContext(DigitContext.class,0);
		}
		public Either_matcherContext either_matcher() {
			return getRuleContext(Either_matcherContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public EscapeContext escape() {
			return getRuleContext(EscapeContext.class,0);
		}
		public ExactlyContext exactly() {
			return getRuleContext(ExactlyContext.class,0);
		}
		public Expr_param_matcherContext expr_param_matcher() {
			return getRuleContext(Expr_param_matcherContext.class,0);
		}
		public FormfeedContext formfeed() {
			return getRuleContext(FormfeedContext.class,0);
		}
		public FlaggedContext flagged() {
			return getRuleContext(FlaggedContext.class,0);
		}
		public FlagsContext flags() {
			return getRuleContext(FlagsContext.class,0);
		}
		public GreekContext greek() {
			return getRuleContext(GreekContext.class,0);
		}
		public Hex_matcherContext hex_matcher() {
			return getRuleContext(Hex_matcherContext.class,0);
		}
		public LatinContext latin() {
			return getRuleContext(LatinContext.class,0);
		}
		public LowerContext lower() {
			return getRuleContext(LowerContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public NondigitContext nondigit() {
			return getRuleContext(NondigitContext.class,0);
		}
		public Not_matcherContext not_matcher() {
			return getRuleContext(Not_matcherContext.class,0);
		}
		public Octal_matcherContext octal_matcher() {
			return getRuleContext(Octal_matcherContext.class,0);
		}
		public Or_matcherContext or_matcher() {
			return getRuleContext(Or_matcherContext.class,0);
		}
		public Range_matcherContext range_matcher() {
			return getRuleContext(Range_matcherContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public SomespaceContext somespace() {
			return getRuleContext(SomespaceContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TabContext tab() {
			return getRuleContext(TabContext.class,0);
		}
		public UnicodecaseContext unicodecase() {
			return getRuleContext(UnicodecaseContext.class,0);
		}
		public UnicodecaseoffContext unicodecaseoff() {
			return getRuleContext(UnicodecaseoffContext.class,0);
		}
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public UnixlinesContext unixlines() {
			return getRuleContext(UnixlinesContext.class,0);
		}
		public UnixlinesoffContext unixlinesoff() {
			return getRuleContext(UnixlinesoffContext.class,0);
		}
		public UpperContext upper() {
			return getRuleContext(UpperContext.class,0);
		}
		public WildContext wild() {
			return getRuleContext(WildContext.class,0);
		}
		public WordboundaryContext wordboundary() {
			return getRuleContext(WordboundaryContext.class,0);
		}
		public MatcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterMatcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitMatcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitMatcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatcherContext matcher() throws RecognitionException {
		MatcherContext _localctx = new MatcherContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matcher);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ATLEAST:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				atleast();
				}
				break;
			case LEFTPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				backeted_matcher();
				}
				break;
			case BETWEEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				between();
				}
				break;
			case ALPHABETIC:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				alphabetic();
				}
				break;
			case ANYWILD:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				anywild();
				}
				break;
			case BELL:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				bell();
				}
				break;
			case BOL:
				enterOuterAlt(_localctx, 7);
				{
				setState(123);
				bol();
				}
				break;
			case BACKTICK:
				enterOuterAlt(_localctx, 8);
				{
				setState(124);
				backtick();
				}
				break;
			case CAPTURE:
				enterOuterAlt(_localctx, 9);
				{
				setState(125);
				capture_matcher();
				}
				break;
			case CASEINS:
				enterOuterAlt(_localctx, 10);
				{
				setState(126);
				caseins();
				}
				break;
			case CASEINSOFF:
				enterOuterAlt(_localctx, 11);
				{
				setState(127);
				caseinsoff();
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 12);
				{
				setState(128);
				char_();
				}
				break;
			case CTRL:
				enterOuterAlt(_localctx, 13);
				{
				setState(129);
				ctrl_matcher();
				}
				break;
			case CURRENCY:
				enterOuterAlt(_localctx, 14);
				{
				setState(130);
				currency();
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 15);
				{
				setState(131);
				digit();
				}
				break;
			case EITHER:
				enterOuterAlt(_localctx, 16);
				{
				setState(132);
				either_matcher();
				}
				break;
			case EOL:
				enterOuterAlt(_localctx, 17);
				{
				setState(133);
				eol();
				}
				break;
			case ESCAPE:
				enterOuterAlt(_localctx, 18);
				{
				setState(134);
				escape();
				}
				break;
			case EXACTLY:
				enterOuterAlt(_localctx, 19);
				{
				setState(135);
				exactly();
				}
				break;
			case ANY:
			case OPTIONAL:
			case SOME:
				enterOuterAlt(_localctx, 20);
				{
				setState(136);
				expr_param_matcher();
				}
				break;
			case FORMFEED:
				enterOuterAlt(_localctx, 21);
				{
				setState(137);
				formfeed();
				}
				break;
			case FLAGGED:
				enterOuterAlt(_localctx, 22);
				{
				setState(138);
				flagged();
				}
				break;
			case FLAGS:
				enterOuterAlt(_localctx, 23);
				{
				setState(139);
				flags();
				}
				break;
			case GREEK:
				enterOuterAlt(_localctx, 24);
				{
				setState(140);
				greek();
				}
				break;
			case HEX:
				enterOuterAlt(_localctx, 25);
				{
				setState(141);
				hex_matcher();
				}
				break;
			case LATIN:
				enterOuterAlt(_localctx, 26);
				{
				setState(142);
				latin();
				}
				break;
			case LOWER:
				enterOuterAlt(_localctx, 27);
				{
				setState(143);
				lower();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 28);
				{
				setState(144);
				newline();
				}
				break;
			case NONDIGIT:
				enterOuterAlt(_localctx, 29);
				{
				setState(145);
				nondigit();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 30);
				{
				setState(146);
				not_matcher();
				}
				break;
			case OCTAL:
				enterOuterAlt(_localctx, 31);
				{
				setState(147);
				octal_matcher();
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 32);
				{
				setState(148);
				or_matcher();
				}
				break;
			case RANGE:
				enterOuterAlt(_localctx, 33);
				{
				setState(149);
				range_matcher();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 34);
				{
				setState(150);
				return_();
				}
				break;
			case SOMESPACE:
				enterOuterAlt(_localctx, 35);
				{
				setState(151);
				somespace();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 36);
				{
				setState(152);
				string();
				}
				break;
			case TAB:
				enterOuterAlt(_localctx, 37);
				{
				setState(153);
				tab();
				}
				break;
			case UNICODECASE:
				enterOuterAlt(_localctx, 38);
				{
				setState(154);
				unicodecase();
				}
				break;
			case UNICODECASEOFF:
				enterOuterAlt(_localctx, 39);
				{
				setState(155);
				unicodecaseoff();
				}
				break;
			case UNION:
				enterOuterAlt(_localctx, 40);
				{
				setState(156);
				union();
				}
				break;
			case UNIXLINES:
				enterOuterAlt(_localctx, 41);
				{
				setState(157);
				unixlines();
				}
				break;
			case UNIXLINESOFF:
				enterOuterAlt(_localctx, 42);
				{
				setState(158);
				unixlinesoff();
				}
				break;
			case UPPER:
				enterOuterAlt(_localctx, 43);
				{
				setState(159);
				upper();
				}
				break;
			case WILD:
				enterOuterAlt(_localctx, 44);
				{
				setState(160);
				wild();
				}
				break;
			case WORDBOUNDARY:
				enterOuterAlt(_localctx, 45);
				{
				setState(161);
				wordboundary();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Literal_matcherContext extends ParserRuleContext {
		public BacktickContext backtick() {
			return getRuleContext(BacktickContext.class,0);
		}
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public WildContext wild() {
			return getRuleContext(WildContext.class,0);
		}
		public Literal_matcherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_matcher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterLiteral_matcher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitLiteral_matcher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitLiteral_matcher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_matcherContext literal_matcher() throws RecognitionException {
		Literal_matcherContext _localctx = new Literal_matcherContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal_matcher);
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BACKTICK:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				backtick();
				}
				break;
			case LEFTPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				backeted_matcher();
				}
				break;
			case WILD:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				wild();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtleastContext extends ParserRuleContext {
		public Token count;
		public TerminalNode ATLEAST() { return getToken(RefiParser.ATLEAST, 0); }
		public TerminalNode LEFTCURLY() { return getToken(RefiParser.LEFTCURLY, 0); }
		public TerminalNode COMMA() { return getToken(RefiParser.COMMA, 0); }
		public TerminalNode RIGHTCURLY() { return getToken(RefiParser.RIGHTCURLY, 0); }
		public TerminalNode INT() { return getToken(RefiParser.INT, 0); }
		public MatcherContext matcher() {
			return getRuleContext(MatcherContext.class,0);
		}
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public AtleastContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atleast; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterAtleast(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitAtleast(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitAtleast(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtleastContext atleast() throws RecognitionException {
		AtleastContext _localctx = new AtleastContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atleast);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(ATLEAST);
			setState(170);
			match(LEFTCURLY);
			setState(171);
			((AtleastContext)_localctx).count = match(INT);
			setState(172);
			match(COMMA);
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(173);
				matcher();
				}
				break;
			case 2:
				{
				setState(174);
				backeted_matcher();
				}
				break;
			}
			setState(177);
			match(RIGHTCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BetweenContext extends ParserRuleContext {
		public Token from;
		public Token to;
		public TerminalNode BETWEEN() { return getToken(RefiParser.BETWEEN, 0); }
		public TerminalNode LEFTCURLY() { return getToken(RefiParser.LEFTCURLY, 0); }
		public List<TerminalNode> COMMA() { return getTokens(RefiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RefiParser.COMMA, i);
		}
		public TerminalNode RIGHTCURLY() { return getToken(RefiParser.RIGHTCURLY, 0); }
		public List<TerminalNode> INT() { return getTokens(RefiParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(RefiParser.INT, i);
		}
		public MatcherContext matcher() {
			return getRuleContext(MatcherContext.class,0);
		}
		public Backeted_matcherContext backeted_matcher() {
			return getRuleContext(Backeted_matcherContext.class,0);
		}
		public BetweenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_between; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).enterBetween(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefiParserListener ) ((RefiParserListener)listener).exitBetween(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefiParserVisitor ) return ((RefiParserVisitor<? extends T>)visitor).visitBetween(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BetweenContext between() throws RecognitionException {
		BetweenContext _localctx = new BetweenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_between);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(BETWEEN);
			setState(180);
			match(LEFTCURLY);
			setState(181);
			((BetweenContext)_localctx).from = match(INT);
			setState(182);
			match(COMMA);
			setState(183);
			((BetweenContext)_localctx).to = match(INT);
			setState(184);
			match(COMMA);
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(185);
				matcher();
				}
				break;
			case 2:
				{
				setState(186);
				backeted_matcher();
				}
				break;
			}
			setState(189);
			match(RIGHTCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
